# locallama-gui

./: .gitignore  README.md  pyproject.toml  requirements.txt
.ollama_tools/: control_behavior_governor.py  control_context_monitor.py  gui_integration.py  ollama_tools_v4.py  ollama_tools_v5.py  test_tools.py  tool_context_builder.py  tool_orchestrator.py  tool_system_inspect.py  tool_workspace_manager.py
docs/: PLUGIN_SDK.md
llm_studio/: Writing___init___py.py  __init__.py  app_logger.py  prompt_manager.py  requirements_.txt
llm_studio/CODEX_harvest_THESE_functions/: agent_manager.py  agent_profile.py  base_plugin.py  config_manager.py  model_info.py  plugin_manager.py  session_manager.py
llm_studio/CODEX_harvest_THESE_functions/widgets/: agent_builder_panel.py  chat_panel.py  collapsible_section.py  log_panel.py  model_panel.py  modelfile_editor.py  parameter_panel.py  plugin_manager_panel.py  prompt_manager_panel.py
llm_studio/app/backend/: __init__.py  base_backend.py  ollama_backend.py  openai_backend.py
llm_studio/app/models/: chat_message.py  session.py
llm_studio/app/plugin_sdk/: __init__.py
locallama_gui/: __init__.py  app.py
locallama_gui/backends/: base.py  manager.py  ollama.py  openai.py
locallama_gui/core/: config.py  domain.py  logging.py  managers.py
locallama_gui/ui/: dialogs.py  main_window.py  theme.py  workers.py
ollama_GUI/addons/ollama_tools/: control_approval_layer.py  control_audit_logger.py  (+9 more)
ollama_GUI/ollama-gui-qt/: ollama-gui-qt  ollama-gui-qt.kdev4  ollama-gui-qt.pro  qrc_resources.cpp
plugins/: sample_plugin.py
(+22 files in other folders)
