[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locallama-gui"
version = "1.0.0"
description = "A production-grade PySide6 desktop control center for local and remote LLMs."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "locallama-gui contributors"}]
dependencies = [
  "PySide6>=6.8.0",
  "httpx>=0.27.0",
  "platformdirs>=4.2.0",
  "pydantic>=2.8.0",
  "psutil>=6.0.0",
  "markdown>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[project.scripts]
locallama-gui = "locallama_gui.app:main"

[tool.setuptools.packages.find]
include = ["locallama_gui*"]

[tool.ruff]
line-length = 100
target-version = "py313"
